# kundoluk-backend

kundoluk_backend-master/: README.md  pyproject.toml
kundoluk_backend-master/docs/: technical_requirements.md
kundoluk_backend-master/src/: manage.py
kundoluk_backend-master/src/kundoluk_backend/: asgi.py  settings.py  wsgi.py
